dropshot/tests/fail/bad_trait_endpoint8.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, impl HttpResponseError>
  --> tests/fail/bad_trait_endpoint8.rs:15:7
   |
15 | trait MyApi {
   |       ^^^^^

error: endpoint `bad_endpoint` must be async
  --> tests/fail/bad_trait_endpoint8.rs:22:5
   |
22 |     fn bad_endpoint(
   |     ^^
